# TMM88_SYNTH

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
cmake/: FindASIO.cmake  FindVST3.cmake
examples/: main.cpp
include/tmm88/: IAudioDevice.h  SynthController.h  VstPlugin.h  dsp.h  framework.h
qml/: main.qml  qml.qrc
src/devices/: AlsaAudioDevice.h  AsioAudioDevice.cpp  AsioAudioDevice.h  CMakeLists.txt  CoreAudioDevice.cpp  CoreAudioDevice.h  JackAudioDevice.cpp  JackAudioDevice.h
src/effects/: CMakeLists.txt  adsr.cpp  adsr.h  crystals_delay.cpp  crystals_delay.h  eventide_filter.cpp  eventide_filter.h  overdrive.cpp  overdrive.h  tc_dynamics.cpp  tc_dynamics.h  vss_reverb.cpp  vss_reverb.h
src/filters/: CMakeLists.txt  lpf.cpp  lpf.h
src/midi/: CMakeLists.txt  midi_handler.cpp  midi_handler.h  osc_handler.h  spectral_delay.cpp  spectral_delay.h
src/synth/: SynthController.cpp
src/synthesis/: CMakeLists.txt  ModMatrix.h  oscillator.cpp  oscillator.h  stereo_panner.cpp  stereo_panner.h  sub_oscillator.cpp  sub_oscillator.h  vca.cpp  vca.h
src/ui/: OscilloscopeItem.cpp  OscilloscopeItem.h  main.cpp
tests/: benchmark_oscillator.cpp  test_dsp.cpp  test_integration.cpp
